--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body {
 	background-color: var(--bg);
+	height: 200vh;
 }
 
 p, a {
@@ -21,7 +22,21 @@ header.header {
 	background-color: var(--main);
 	padding-inline: max(1rem, min(20vw, 3rem)) ;
 	padding-block: 1rem;
+	opacity: 0.9;
+
+	height: 2rem;
+	width: calc(95vw - max(1rem, min(20vw, 3rem)));
 	
+	position: fixed;
+
+	z-index: 2;
+
+	-webkit-box-shadow: 5px 5px 29px -1px rgba(0,0,0,0.3); 
+	box-shadow: 5px 5px 29px -1px rgba(0,0,0,0.3);
+}
+
+header.header  * {
+	opacity: 1;
 }
 
 img.site-logo {
@@ -42,7 +57,8 @@ header li {
 
 header a {
 	text-decoration: none;
-	color: var(--content)
+	color: var(--content);
+	font-weight: 400;
 }
 
 header a:hover {
@@ -55,7 +71,9 @@ section.hero {
 	object-fit: fill;
 	background-image: url(../img/hero-img.jpg);
 	background-size: cover;
-	height: 60vh;
+	height: 80vh;
+
+	padding-top: 2.25rem;
 
 	display: flex;
 	align-items: center;
@@ -66,6 +84,7 @@ div.hero__content {
 	display: flex;
 	justify-content: space-between;
 	width: 90%;
+	align-items: center;
 }
 
 h1.hero__title, p.hero__desc {
@@ -73,21 +92,46 @@ h1.hero__title, p.hero__desc {
 }
 
 h1.hero__title {
-	font-size: 4rem;
+	font-size: 7rem;
 }
 
 p.hero__desc {
-	font-size: 2rem;
+	font-size: 2.25rem;
+	font-weight: var(--w-light);
 }
 
 /* Main */
 
 section.card {
-	max-width: min(98vh, 50rem);
+	max-width: min(98vh, 70rem);
 	margin-inline: auto;
 	background-color: var(--main);
+	padding: 1rem;
+	border-radius: 0.25rem;
+
+	/* transform: translateY(-1.5rem); */
+	transition: 0.9s;
+
+	-webkit-box-shadow: 5px 5px 29px -1px rgba(0,0,0,0.3); 
+	box-shadow: 5px 5px 29px -1px rgba(0,0,0,0.3);
+
 }
 
-mark {
-	background-color: var(--secondary);
+.card.show {
+	transform: translateY(-1.5rem);
+	transition: 0.9s;
+}
+
+
+.card h2.card__title {
+	font-size: 3.5rem;
+	margin-bottom: 0.75rem;
+}
+
+.card p.card__content {
+	font-size: 1.15rem;
+}
+
+p.card__content a.card__link {
+	color: var(--link);
 }
