--- a/docs/assets/css/var.css
+++ b/docs/assets/css/var.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&family=Yeseva+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Syne:wght@500;700&display=swap'); */
+
+
 
 :root {
 	--primary: #210098;
